테스트 코드 작성및 관련 코드 수정